[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bapp-api-client"
version = "0.3.0"
description = "BAPP Auto API Client for Python"
requires-python = ">=3.9"
license = "MIT"
keywords = ["bapp", "api", "client"]
readme = "README.md"
dependencies = ["requests>=2.20"]

[project.urls]
Homepage = "https://www.bapp.ro"
Repository = "https://github.com/bapp-open/sdk-python"
